feat: header include adjust

--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home</title>
-  <link rel="stylesheet" href="./home.css">
+  <link rel="stylesheet" href="/public/home.css">
 </head>
 <body>
   <h1>public/index.html</h1>
-  <img src="./disney.png" alt="">
+  <img src="/public/disney.png" alt="">
   <a href="/public/math.html">public/math.html</a>
 </body>
 </html>
